--- a/management-system-react/package.json
+++ b/management-system-react/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "antd": "^4.18.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1"
   },
   "alias": {
     "@assets": "src/assets"
