--- a/management-system-react/package.json
+++ b/management-system-react/package.json
@@ -11,9 +11,12 @@
     "vite": "^2.7.2"
   },
   "dependencies": {
+    "@rematch/core": "^2.2.0",
+    "@rematch/loading": "^2.1.2",
     "antd": "^4.18.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1"
   },
   "alias": {
