--- a/management-system-react/package.json
+++ b/management-system-react/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "scripts": {
     "start": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "lint": "standard --fix"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
     "less": "^4.1.2",
+    "standard": "^16.0.4",
     "vite": "^2.7.2"
   },
   "dependencies": {
