--- a/management-system-react/package.json
+++ b/management-system-react/package.json
@@ -6,8 +6,14 @@
     "build": "vite build",
     "lint": "standard --fix"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
+  },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
+    "husky": "^4.3.8",
     "less": "^4.1.2",
     "standard": "^16.0.4",
     "vite": "^2.7.2"
