--- a/management-system-react/package.json
+++ b/management-system-react/package.json
@@ -12,20 +12,24 @@
     }
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^1.0.7",
-    "husky": "^4.3.8",
-    "less": "^4.1.2",
-    "standard": "^16.0.4",
-    "vite": "^2.7.2"
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-redux": "^7.1.24",
+    "@vitejs/plugin-react": "^2.0.0",
+    "husky": "4.3.8",
+    "less": "^4.1.3",
+    "standard": "^17.0.0",
+    "typescript": "^4.7.4",
+    "vite": "^3.0.2"
   },
   "dependencies": {
     "@rematch/core": "^2.2.0",
     "@rematch/loading": "^2.1.2",
-    "antd": "^4.18.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1"
+    "antd": "^4.21.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0"
   },
   "alias": {
     "@assets": "src/assets"
