--- a/management-system-react/package.json
+++ b/management-system-react/package.json
@@ -15,8 +15,10 @@
     "@vitejs/plugin-react": "^1.0.7",
     "husky": "^4.3.8",
     "less": "^4.1.2",
-    "standard": "^16.0.4",
-    "vite": "^2.7.2"
+    "mockjs": "^1.1.0",
+    "standard": "^17.0.0",
+    "vite": "^2.7.2",
+    "vite-plugin-mock": "^2.9.6"
   },
   "dependencies": {
     "@rematch/core": "^2.2.0",
@@ -24,6 +26,7 @@
     "antd": "^4.18.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.4.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1"
   },
