--- a/management-system-react/.eslintrc.json
+++ b/management-system-react/.eslintrc.json
@@ -4,25 +4,32 @@
         "es2021": true
     },
     "extends": [
+        "eslint:recommended",
         "plugin:react/recommended",
-        "standard",
-        "plugin:react/jsx-runtime"
+        "plugin:react/jsx-runtime",
+        "standard"
     ],
     "overrides": [
     ],
     "parserOptions": {
         "ecmaVersion": "latest",
-        "sourceType": "module"
+        "sourceType": "module",
+        "ecmaFeatures": {
+            "jsx": true
+        }
     },
     "plugins": [
         "react"
     ],
-    "rules": {
-        "react/prop-types": "off"
-    },
     "settings": {
         "react": {
             "version": "detect"
         }
+    },
+    "rules": {
+        "react/prop-types": "off",
+        "react/jsx-no-literals": "off",
+        "react/jsx-indent": [2, 2],
+        "react/jsx-indent-props": [2, 2]
     }
 }
