--- a/management-system-react/.eslintrc.json
+++ b/management-system-react/.eslintrc.json
@@ -19,7 +19,10 @@
         }
     },
     "plugins": [
-        "react"
+        "react",
+        "simple-import-sort",
+        "import",
+        "unused-imports"
     ],
     "settings": {
         "react": {
@@ -30,6 +33,17 @@
         "react/prop-types": "off",
         "react/jsx-no-literals": "off",
         "react/jsx-indent": [2, 2],
-        "react/jsx-indent-props": [2, 2]
+        "react/jsx-indent-props": [2, 2],
+        "simple-import-sort/imports": "error",
+        "simple-import-sort/exports": "error",
+        "import/first": "error",
+        "import/newline-after-import": "error",
+        "import/no-duplicates": "error",
+        "no-unused-vars": "off",
+        "unused-imports/no-unused-imports": "error",
+		"unused-imports/no-unused-vars": [
+			"warn",
+			{ "vars": "all", "varsIgnorePattern": "^_", "args": "after-used", "argsIgnorePattern": "^_" }
+		]
     }
 }
