--- a/management-system-react/package.json
+++ b/management-system-react/package.json
@@ -12,28 +12,30 @@
     }
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^1.0.7",
+    "@vitejs/plugin-react": "^2.1.0",
     "eslint": "^8.23.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.5",
     "eslint-plugin-promise": "^6.0.1",
     "eslint-plugin-react": "^7.31.1",
-    "husky": "^4.3.8",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "husky": "4.3.8",
     "less": "^4.1.2",
     "mockjs": "^1.1.0",
     "standard": "^17.0.0",
-    "vite": "^2.7.2",
+    "vite": "^3.1.0",
     "vite-plugin-mock": "^2.9.6"
   },
   "dependencies": {
     "@rematch/core": "^2.2.0",
     "@rematch/loading": "^2.1.2",
     "antd": "^4.18.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
-    "react-redux": "^7.2.6",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.2.1"
   },
   "alias": {
