--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,10 +8,11 @@ on:
 jobs:
   build:
     runs-on: [self-hosted, docker]
+    defaults:
+      run:
+        working-directory: ./management-system-react
     steps:
       - uses: actions/checkout@v3
-      - name: Choose template
-        run: cd management-system-react
       - name: Build
         run: docker build -t frontend .
       - name: Deploy
