--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,7 +15,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build
         run: docker build -t frontend:${{ github.sha }} .
+      - name: Stop old container
+        continue-on-error: true
+        run: docker stop frontend
       - name: Deploy
-        run: |
-          docker stop frontend
-          docker run --name frontend:${{ github.sha }} -p 80:80 frontend:latest
+        run: docker run --name frontend:${{ github.sha }} -p 80:80 frontend:latest
