--- a/management-system-react/nginx.conf
+++ b/management-system-react/nginx.conf
@@ -4,6 +4,6 @@ server {
 
     location / {
         root   /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/index.html /index.html;
     }
 }
