--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,6 +17,11 @@ jobs:
         run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
       - name: Build
         run: docker build -t frontend:${{ env.SHORT_SHA }} .
+  deploy:
+    defaults:
+      run:
+        working-directory: ./management-system-react
+    steps:
       - name: Stop old container
         continue-on-error: true
         run: docker stop $(docker ps --filter name=frontend -q)
