--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,5 +27,7 @@ jobs:
       - name: Stop old container
         continue-on-error: true
         run: docker stop $(docker ps --filter name=frontend -q)
+      - name: Get commit tag
+        run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
       - name: Deploy
         run: docker run --name frontend-${{ env.SHORT_SHA }} -d -p 80:80 frontend:${{ env.SHORT_SHA }}
