--- a/management-system-react/package.json
+++ b/management-system-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "management-system-react",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "scripts": {
     "start": "vite",
     "build": "vite build",
@@ -12,33 +12,31 @@
     }
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^2.1.0",
+    "@vitejs/plugin-react": "^4.0.1",
     "eslint": "^8.23.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.2.5",
+    "eslint-plugin-n": "^16.0.1",
     "eslint-plugin-promise": "^6.0.1",
     "eslint-plugin-react": "^7.31.1",
-    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "4.3.8",
     "less": "^4.1.2",
     "mockjs": "^1.1.0",
     "standard": "^17.0.0",
-    "vite": "^3.1.0",
-    "vite-plugin-mock": "^2.9.6"
+    "vite": "^4.3.9",
+    "vite-plugin-mock": "^3.0.0"
   },
   "dependencies": {
     "@rematch/core": "^2.2.0",
     "@rematch/loading": "^2.1.2",
-    "antd": "^4.18.3",
+    "antd": "^5.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
-    "react-router-dom": "^6.2.1"
-  },
-  "alias": {
-    "@assets": "src/assets"
+    "react-router-dom": "^6.2.1",
+    "redux": "^4.2.1"
   }
 }
