--- a/management-system-react/package.json
+++ b/management-system-react/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@rematch/core": "^2.2.0",
     "@rematch/loading": "^2.1.2",
+    "ahooks": "^3.7.8",
     "antd": "^5.8.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
