--- a/management-system-react/package.json
+++ b/management-system-react/package.json
@@ -12,30 +12,31 @@
   "dependencies": {
     "@rematch/core": "^2.2.0",
     "@rematch/loading": "^2.1.2",
-    "ahooks": "^3.7.8",
-    "antd": "^5.8.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1",
-    "react-redux": "^8.1.2",
-    "react-router-dom": "^6.15.0",
-    "redux": "^4.2.1"
+    "ahooks": "^3.8.1",
+    "antd": "^5.21.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.27.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
-    "eslint": "^8.45.0",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.9.0",
+    "@typescript-eslint/parser": "^8.9.0",
+    "@vitejs/plugin-react": "^4.3.2",
+    "eslint": "^9.12.0",
     "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.12",
     "less": "^4.2.0",
     "mockjs": "^1.1.0",
-    "standard": "^17.1.0",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5",
-    "vite-plugin-mock": "2.9.8"
-  }
+    "standard": "^17.1.2",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.9",
+    "vite-plugin-mock": "3.0.2"
+  },
+  "packageManager": "pnpm@9.12.2"
 }
