--- a/management-system-react/package.json
+++ b/management-system-react/package.json
@@ -22,6 +22,8 @@
     "redux": "^5.0.1"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.2.0",
+    "@eslint/js": "^9.12.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^8.9.0",
@@ -31,10 +33,13 @@
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.12",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "globals": "^15.11.0",
     "less": "^4.2.0",
     "mockjs": "^1.1.0",
     "standard": "^17.1.2",
     "typescript": "^5.6.3",
+    "typescript-eslint": "^8.9.0",
     "vite": "^5.4.9",
     "vite-plugin-mock": "3.0.2"
   },
