--- a/management-system-react/package.json
+++ b/management-system-react/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint --fix ./src",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.21.1",
     "@rematch/core": "^2.2.0",
     "@rematch/loading": "^2.1.2",
     "ahooks": "^3.8.1",
@@ -19,27 +20,31 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.0",
     "@eslint/js": "^9.12.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
-    "@typescript-eslint/eslint-plugin": "^8.9.0",
-    "@typescript-eslint/parser": "^8.9.0",
+    "@typescript-eslint/eslint-plugin": "^8.10.0",
+    "@typescript-eslint/parser": "^8.10.0",
     "@vitejs/plugin-react": "^4.3.2",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.12.0",
-    "eslint-config-standard": "^17.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.12",
-    "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^15.11.0",
     "less": "^4.2.0",
     "mockjs": "^1.1.0",
-    "standard": "^17.1.2",
+    "postcss": "^8.4.47",
+    "prettier": "3.3.3",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.9.0",
+    "typescript-eslint": "^8.10.0",
     "vite": "^5.4.9",
     "vite-plugin-mock": "3.0.2"
   },
