--- a/management-system-react/.prettierrc
+++ b/management-system-react/.prettierrc
@@ -1,6 +1,10 @@
 {
   "semi": false,
   "singleQuote": true,
+  "jsxSingleQuote": false,
+  "bracketSpacing": true,
+  "arrowParens": "avoid",
+  "trailingComma": "all",
   "tabWidth": 2,
   "printWidth": 80
 }
